# HitboxEditor

./: .gitignore  CMakeLists.txt  README.md
contrib/images/icon/: icon.xpm
contrib/wxwidgets/msvc/include/wx/: setup.h
resources/: importTest.json  openTest.json  sdadas.json  test1.json
src/: Application.cpp  Application.h  Canvas.cpp  Canvas.h  CanvasView.cpp  CanvasView.h  Frame.cpp  Frame.h  Headers.h  Hitbox.cpp  Hitbox.h  HitboxData.cpp  HitboxData.h  HitboxTab.cpp  HitboxTab.h  Image.cpp  Image.h  ImageTab.cpp  ImageTab.h  ImagesContainer.cpp  ImagesContainer.h  main.cpp
